test/langtools/tools/javac/specialConstantFolding/warningNotFoundOrIncorrect/WarningIfClassOrMemberNotFound2.out
WarningIfClassOrMemberNotFound2.java:17:23: compiler.warn.member.not.found.at.class: m, interface, WarningIfClassOrMemberNotFound2
- compiler.err.warnings.and.werror
1 error
1 warning
